--- a/index.html
+++ b/index.html
@@ -441,25 +441,25 @@
 	&nbsp;微  软  官  方  系  统  镜  像
 </h2>
 <ul>
-	<li class="al">
+	<li class="bl">
 		<a href="https://drive.massgrave.dev/zh-hans_windows_xp_professional_with_service_pack_3_x86_cd_vl_x14-74070.iso" target="_blank">Windows XP SP3 VL (x86)</a><font color="red" title="Windows xp key">XCYBK-2B3KV-G8T8F-WXJM7-WCTYT</font>
 	</li>
-	<li class="al">
+	<li class="bl">
 		<a href="https://drive.massgrave.dev/cn_windows_7_professional_with_sp1_x86_dvd_u_677162.iso" target="_blank">Windows 7 Professional 32位 SP1</a>
 	</li>
-	<li class="al">
+	<li class="bl">
 		<a href="https://drive.massgrave.dev/cs_windows_7_professional_with_sp1_x64_dvd_u_676956.iso" target="_blank">Windows 7 Professional 64位 SP1</a>
 	</li>
-	<li class="al">
+	<li class="bl">
 		<a href="https://drive.massgrave.dev/cn_windows_7_ultimate_with_sp1_x86_dvd_u_677486.iso" target="_blank">Windows 7 Ultimate 32位 SP1</a>
 	</li>
-	<li class="al">
+	<li class="bl">
 		 <a href="https://drive.massgrave.dev/cn_windows_7_ultimate_with_sp1_x64_dvd_u_677408.iso" target="_blank">Windows 7 Ultimate 64位 SP1</a>
 	</li>
-	<li class="al">
+	<li class="bl">
 		<a href="https://drive.massgrave.dev/zh-cn_windows_11_consumer_editions_version_23h2_updated_dec_2023_x64_dvd_7cd2c9a8.iso" target="_blank">Windows 11 Consumer 消费 23H2</a>
 	</li>
-        <li class="al">
+        <li class="bl">
             <a href="https://drive.massgrave.dev/zh-cn_windows_11_business_editions_version_23h2_updated_dec_2023_x64_dvd_9a37d106.iso" title="Windows 11 Business 商业 23H2">Windows 11 Business 商业 23H2</a>
         </li>
 </ul>
